--- a/acne.html
+++ b/acne.html
@@ -1,99 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>EPIGLOW | Acne Care</title>
+<meta charset="UTF-8">
+<title>EPIGLOW | Acne Care</title>
 
-    <style>
-        body {
-            margin: 0;
-            background: #000;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
+<style>
+body {
+    margin: 0;
+    background: #000;
+    color: white;
+    font-family: Arial, sans-serif;
+}
 
-        /* HEADER */
-        .top-header {
-            display: flex;
-            justify-content: center;
-            background: #111;
-            padding: 14px;
-        }
+.top-header {
+    display: flex;
+    justify-content: center;
+    background: #111;
+    padding: 14px;
+}
 
-        .logo-link {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            color: white;
-            text-decoration: none;
-            font-size: 22px;
-            font-weight: bold;
-        }
+.logo-link {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: white;
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: bold;
+}
 
-        .logo {
-            width: 45px;
-            height: 45px;
-        }
+.logo {
+    width: 45px;
+}
 
-        /* TITLE */
-        .page-title {
-            text-align: center;
-            margin: 20px;
-            font-size: 22px;
-        }
+.page-title {
+    text-align: center;
+    margin: 20px;
+    font-size: 22px;
+}
 
-        /* ADVICE BUTTON */
-        .advice-btn {
-            display: block;
-            width: 260px;
-            margin: 10px auto 25px;
-            padding: 12px;
-            background: purple;
-            color: white;
-            text-align: center;
-            border-radius: 8px;
-            text-decoration: none;
-        }
+.advice-btn {
+    display: block;
+    width: 90%;
+    max-width: 320px;
+    margin: 10px auto 25px;
+    padding: 14px;
+    background: #7b2cff;
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+}
 
-        /* PRODUCT GRID */
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-            padding: 15px;
-        }
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    padding: 15px;
+}
 
-        .card {
-            background: #111;
-            padding: 12px;
-            border-radius: 10px;
-            text-align: center;
-        }
+.card {
+    background: #111;
+    padding: 12px;
+    border-radius: 10px;
+    text-align: center;
+}
 
-        .card img {
-            width: 100%;
-            height: 120px;
-            object-fit: contain;
-            background: white;
-            border-radius: 8px;
-        }
+.card img {
+    width: 100%;
+    height: 120px;
+    object-fit: contain;
+    background: white;
+    border-radius: 8px;
+}
 
-        .card p {
-            margin: 10px 0 5px;
-        }
+.card p {
+    margin: 10px 0 5px;
+}
 
-        .card a {
-            display: block;
-            margin-top: 8px;
-            color: cyan;
-            text-decoration: none;
-        }
-    </style>
+.card a {
+    display: block;
+    margin-top: 8px;
+    color: cyan;
+    text-decoration: none;
+}
+</style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header class="top-header">
     <a href="index.html" class="logo-link">
         <img src="images/logo.png" class="logo">
@@ -101,39 +98,25 @@
     </a>
 </header>
 
-<!-- TITLE -->
 <h2 class="page-title">Acne Care Product Recommendations</h2>
 
-<!-- ADVICE BUTTON -->
+<!-- 🔥 ADVICE BUTTON -->
 <a href="advice.html" class="advice-btn">
-    🌞🌙 View Day & Night Skincare Advice
+    🌞🌙 Day & Night Skincare Advice
 </a>
 
-<!-- PRODUCTS -->
 <div class="grid">
 
     <div class="card">
         <img src="images/dermaco.png">
-        <p>Derma Co Salicylic Acid Gel</p>
+        <p>Derma Co Salicylic Gel</p>
         <a href="https://thedermaco.com" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
         <img src="images/minimalist.png">
-        <p>Minimalist Salicylic Acid Serum</p>
+        <p>Minimalist Salicylic Serum</p>
         <a href="https://beminimalist.co" target="_blank">Buy Now</a>
-    </div>
-
-    <div class="card">
-        <img src="images/plum.png">
-        <p>Plum Green Tea Night Gel</p>
-        <a href="https://plumgoodness.com" target="_blank">Buy Now</a>
-    </div>
-
-    <div class="card">
-        <img src="images/mamaearth.png">
-        <p>Mamaearth Tea Tree Gel</p>
-        <a href="https://mamaearth.in" target="_blank">Buy Now</a>
     </div>
 
 </div>
