--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 </head>
 
 <body>
+  <header class="top-header">
+  <a href="epiglow.html" class="logo-link">
+    <img src="images/logo.png" alt="EPIGLOW Logo" class="logo">
+    <span class="brand-name">EPIGLOW</span>
+  </a>
+</header>
+
 
   <div class="card">
     <h2>✨ EPIGLOW ✨</h2>
@@ -90,3 +97,4 @@
 
 </body>
 </html>
+
