--- a/advice.html
+++ b/advice.html
@@ -1,55 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>EPIGLOW | Day & Night Skincare Advice</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>EPIGLOW | Day & Night Skincare</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="advice-body">
 
-<!-- HEADER WITH CLICKABLE LOGO -->
-<header class="top-header">
-    <a href="index.html" class="logo-link">
-        <img src="images/logo.png" class="logo">
-        <span>EPIGLOW</span>
-    </a>
-</header>
+    <!-- Header with small logo -->
+    <header class="advice-header">
+        <img src="images/epiglow_logo.png" alt="EPIGLOW Logo" class="advice-logo">
+        <h1>Daily Skincare Advice</h1>
+    </header>
 
-<h2 class="center">🌿 Daily Skincare Advice</h2>
+    <!-- Content -->
+    <section class="advice-content">
 
-<!-- DAY ROUTINE -->
-<div class="advice-card">
-    <h3>🌞 Day Routine</h3>
-    <ul>
-        <li>Cleanse your face with a gentle face wash</li>
-        <li>Apply toner to balance skin pH</li>
-        <li>Use a lightweight moisturizer</li>
-        <li>Apply sunscreen (SPF 30 or above)</li>
-        <li>Avoid touching your face frequently</li>
-    </ul>
-</div>
+        <h2>🌞 Day Routine</h2>
+        <ul>
+            <li>Cleanse your face with a gentle face wash</li>
+            <li>Apply toner to balance skin pH</li>
+            <li>Use a light gel-based moisturizer</li>
+            <li>Apply sunscreen (SPF 30 or above)</li>
+            <li>Avoid touching your face frequently</li>
+        </ul>
 
-<!-- NIGHT ROUTINE -->
-<div class="advice-card">
-    <h3>🌙 Night Routine</h3>
-    <ul>
-        <li>Remove makeup and dirt using a cleanser</li>
-        <li>Apply serum (Vitamin C / Salicylic / Niacinamide)</li>
-        <li>Use a nourishing night cream</li>
-        <li>Keep your skin hydrated overnight</li>
-        <li>Get proper sleep (7–8 hours)</li>
-    </ul>
-</div>
+        <h2>🌙 Night Routine</h2>
+        <ul>
+            <li>Remove makeup and dirt using a cleanser</li>
+            <li>Apply serum (Vitamin C / Salicylic / Niacinamide)</li>
+            <li>Use a nourishing night cream</li>
+            <li>Keep skin hydrated overnight</li>
+            <li>Get proper sleep (7–8 hours)</li>
+        </ul>
 
-<!-- GENERAL TIPS -->
-<div class="advice-card">
-    <h3>💡 General Tips</h3>
-    <ul>
-        <li>Drink plenty of water</li>
-        <li>Avoid harsh chemicals</li>
-        <li>Do not over-exfoliate</li>
-        <li>Maintain a healthy diet</li>
-    </ul>
-</div>
+        <h2>✨ General Tips</h2>
+        <ul>
+            <li>Drink plenty of water</li>
+            <li>Avoid excessive oily foods</li>
+            <li>Do not over-wash your face</li>
+        </ul>
+
+    </section>
 
 </body>
 </html>
